--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "author": "Justin Walgran <justin@walgran.com>",
     "name": "septa",
     "description": "Get information about SEPTA trains, busses, and trolleys.",
+    "homepage": "http://jwalgran.github.com/septa",
     "tags" : ["transit", "search"],
     "version": "0.0.1",
     "repository": {
